--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0, user-scalable=no">
-    <link rel="shortcut icon" href="/static/favicon.jpg">
+    <meta
+      name="viewport"
+      content="width=device-width,initial-scale=1.0,maximum-scale=1.0, user-scalable=no"
+    />
+    <link rel="shortcut icon" href="/static/favicon.jpg" />
     <title>lol</title>
-
   </head>
   <body>
     <div id="lol"></div>
