--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta
       name="viewport"
       content="width=device-width,initial-scale=1.0,maximum-scale=1.0, user-scalable=no"
     />
-    <link rel="shortcut icon" href="/static/favicon.jpg" />
+    <link rel="shortcut icon" href="/static/favicon.jpg"/>
     <title>lol</title>
   </head>
   <body>
